Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6601

deactivated OSTs do not appear to be inactive according to 'lctl dl'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.9.0
    • Lustre 2.8.0
    • 3
    • 9223372036854775807

      Following the instructions in Section 19.1.2 of the ops manual I deactivated an OST.

      t:~# lctl dl
      ...
       21 UP osp lustre-OST0000-osc-MDT0000 lustre-MDT0000-mdtlov_UUID 5
       22 UP osp lustre-OST0001-osc-MDT0000 lustre-MDT0000-mdtlov_UUID 5
      t:lustre# lctl --device 21 deactivate
      t:lustre# lctl dl
      ...
       21 UP osp lustre-OST0000-osc-MDT0000 lustre-MDT0000-mdtlov_UUID 5
       22 UP osp lustre-OST0001-osc-MDT0000 lustre-MDT0000-mdtlov_UUID 5
      

      Device 21 should be IN instead of UP. This is controlled by the obd_inactive field of struct obd_device which is only modified in the lov layer.

      The active proc files do work correctly:

      t:lustre# cat /proc/fs/lustre/osp/lustre-OST0000-osc-MDT0000/active 
      0
      t:lustre# cat /proc/fs/lustre/osp/lustre-OST0001-osc-MDT0000/active 
      1
      

      Also note that the examples in the manual need to be updated to reflect the osc to osp switchover.

            ys Yang Sheng
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: