LU-6601 osp: update obd status while osp status changed

We should update OBD status when osp import status is
changed. Else the status change will not reflect in
'lctl dl'.

Lustre-change: http://review.whamcloud.com/19402
Lustre-commit: ba2ac3502026fcf7399ac102d24bbb7f3d7a8c87

Signed-off-by: Yang Sheng <yang.sheng@intel.com>
Change-Id: Ice10802028b569470027db33a5e5e5e2bcc9dfc0
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Niu Yawei <yawei.niu@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>
Reviewed-on: http://review.whamcloud.com/20088
Tested-by: Jenkins
Reviewed-by: Bobi Jam <bobijam@hotmail.com>
Reviewed-by: Lai Siyao <lai.siyao@intel.com>
Reviewed-by: John L. Hammond <john.hammond@intel.com>